# LinuxAudit

./: .gitignore  README.md  bash.sh  bins.json  linux_audit.py  pyproject.toml  requirements.txt
config/: bins.json  colors.json
scripts/: basic_info_check.sh  medium_info_check.sh
src/collectors/: __init__.py  basic_audit.py  linux_audit.py  medium_audit.py
src/gui/: __init__.py  gui.py  gui1.py
